@@ -547,7 +547,7 @@ sub _is_vendor_consent_range_encoding {
 sub _parse_range_section {
     my ( $self, $max_id, $range_section_start_offset ) = @_;
 
-    my $data = substr( $self->{data}, $range_section_start_offset, $max_id );
+    my $data = substr( $self->{data}, $range_section_start_offset );
 
     my ( $range_section, $next_offset ) =
       GDPR::IAB::TCFv2::RangeSection->Parse(
