@@ -1,3 +1,5 @@
+  - fix a bug while parsing valid consent strings range-based, see https://github.com/peczenyj/GDPR-IAB-TCFv2/issues/20
+
 0.083
   - refactor on Publisher Restriction parsing.
   - small fixes about data and offset.
